name:                masque
version:             15.4.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/monte-language/masque
license:             GPL-3
license-file:        LICENSE
author:              Corbin Simpson
maintainer:          cds@corbinsimpson.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable masque
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Masque.AST
                     , Masque.Equality
                     , Masque.Eval
                     , Masque.Monte
                     , Masque.Objects.Bool
                     , Masque.Objects.Builtin
                     , Masque.Objects.Double
                     , Masque.Objects.Ejector
                     , Masque.Objects.Int
                     , Masque.Objects.Safe
                     , Masque.Objects.Str
  other-extensions:    DeriveDataTypeable,
                       DeriveGeneric,
                       RecursiveDo,
                       TemplateHaskell,
                       ViewPatterns,
                       FlexibleContexts
  build-depends:       base == 4.8.*
                     , bound == 1.0.*
                     , binary == 0.7.*
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , data-binary-ieee754 == 0.4.*
                     , either == 4.4.*
                     , free == 4.12.*
                     , GenericPretty == 1.2.*
                     , lens == 4.13.*
                     , mtl == 2.2.*
                     , network == 2.6.*
                     , prelude-extras == 0.4.*
                     , semigroups == 0.18.*
                     , transformers == 0.4.*
  -- hs-source-dirs:      
  default-language:    Haskell2010
